# FluentUI

./: .markdownlint.json  CI_CD_GUIDE.md  DELIVERY_CHECKLIST.md  IMPLEMENTATION_GUIDE.md
.github/workflows/: macos.yml  ubuntu.yml  windows-arm.yml  windows-mingw.yml  windows-qt5.yml  windows.yml
config/: fluentui_integration.json
example/: CMakeLists.txt  example.qrc  example_en_US.ts  example_zh_CN.ts
example/qml/: App.qml
example/qml/component/: UI_Card.qml  UI_InputBlock.qml
example/qml/global/: GlobalModel.qml  ItemsFooter.qml  ItemsOriginal.qml
example/qml/page/: T_About.qml  T_Settings.qml  T_UI_AssetManagement.qml  T_UI_Module1_RegularCheck.qml  T_UI_Module2_VibNoise.qml  T_UI_Module3_MultiParam.qml  T_UI_Overview.qml  T_UI_ReportExport.qml
example/qml/window/: MainWindow.qml
example/src/: main.cpp
example/src/helper/: PowerSystemAnalyzer.cpp  PowerSystemAnalyzer.h
scripts/: windows-publish.ps1
src/: CMAKE_ADDITIONS.txt  CMakeLists.txt  FluTextStyle.cpp  fluentui_zh_CN.ts  stdafx.h
src/Qt5/imports/FluentUI/Controls/: FluNavigationView.qml  FluTableView.qml
src/algorithms/: AlgorithmAdapter.cpp  AlgorithmAdapter.h
src/algorithms/bridge_scripts/: run_fault_analysis.m  run_power_flow.m
src/octave_engine/: OctaveDataBridge.cpp  OctaveDataBridge.h  OctaveEngine.cpp  OctaveEngine.h  OctaveWorker.cpp  OctaveWorker.h
src/pdf_export/: FluReportBuilder.cpp  FluReportBuilder.h
tests/: CMakeLists.txt
tests/integration_tests/: test_octave_integration.cpp
tests/pdf_export_tests/: test_pdf_export.cpp
tests/test_data/: generate_ieee14.m
ui_tmp/: UI_DRAFT.md
(+2 files in other folders)
